<resources>
    <string name="app_name">TourPlaner 2026</string>
    <string name="error_login_failed">Anmeldung fehlgeschlagen. Bitte Internetverbindung prüfen.</string>
    <string name="login_retry">Erneut versuchen</string>
    <string name="login_title">Anmelden</string>
    <string name="login_admin_email_hint">Admin E-Mail</string>
    <string name="login_admin_password_hint">Passwort</string>
    <string name="login_admin_submit">Als Admin anmelden</string>
    <string name="login_anonym_continue">Anonym weiter</string>
    <string name="login_error_admin">E-Mail oder Passwort falsch.</string>
    <string name="label_wochentag">Wochentag:</string>
    <string name="label_foto_uploading">Foto wird hochgeladen…</string>
    <string name="label_fotos">Fotos</string>
    <string name="menu_kunden">Kunden Liste</string>
    <string name="menu_touren">Touren Planer</string>
    <string name="menu_neu">Neuer Kunde</string>
    <string name="save_success">Kunde erfolgreich gespeichert</string>
    <string name="delete_confirm">Bist du sicher, dass du diesen Kunden löschen möchtest?</string>
    <string name="back">Zurück</string>
    <string name="search_hint">Suchen...</string>
    <string name="no_termin_regeln">Keine Termin-Regeln</string>
    <string name="toast_termine_nur_heute">Termine können nur am Tag Heute erledigt werden.</string>
    <string name="toast_abholung_nur_heute">Abholung kann nur erledigt werden, wenn das Datum heute ist.</string>
    <string name="toast_ueberfaellig_nur_heute">Überfällige Termine können nur am heutigen Tag erledigt werden.</string>
    <string name="toast_auslieferung_nur_nach_abholung">Auslieferung kann nicht erledigt werden, solange die Abholung nicht erledigt ist.</string>
    <string name="toast_auslieferung_nur_heute">Auslieferung kann nur erledigt werden, wenn das Datum heute ist.</string>
    <string name="toast_kw_nur_abholung_auslieferung">KW (Keine Wäsche) nur an Abholungs- oder Auslieferungstag.</string>
    <string name="error_abholung_registrieren">Fehler beim Registrieren der Abholung. Bitte erneut versuchen.</string>
    <string name="toast_abholung_registriert">Abholung registriert</string>
    <string name="error_auslieferung_registrieren">Fehler beim Registrieren der Auslieferung. Bitte erneut versuchen.</string>
    <string name="toast_auslieferung_registriert">Auslieferung registriert</string>
    <string name="error_kw_registrieren">Fehler beim Registrieren „Keine Wäsche“. Bitte erneut versuchen.</string>
    <string name="toast_kw_registriert">Keine Wäsche registriert</string>
    <string name="error_verschieben">Fehler beim Verschieben. Bitte erneut versuchen.</string>
    <string name="toast_termine_verschoben">Alle zukünftigen Termine verschoben</string>
    <string name="toast_termin_verschoben">Termin verschoben</string>
    <string name="error_urlaub">Fehler beim Eintragen des Urlaubs. Bitte erneut versuchen.</string>
    <string name="toast_urlaub_eingetragen">Urlaub eingetragen</string>
    <string name="error_rueckgaengig">Fehler beim Rückgängigmachen. Bitte erneut versuchen.</string>
    <string name="error_firebase_allgemein">Verbindungsfehler. Bitte prüfen Sie die Internetverbindung und versuchen Sie es erneut.</string>
    <string name="toast_rueckgaengig_gemacht">Rückgängig gemacht</string>
    <string name="toast_termin_deleted">Termin gelöscht</string>
    <string name="dialog_undo_termin_title">Termin ausgesetzt</string>
    <string name="dialog_undo_termin_message">Möchten Sie den Termin wiederherstellen?</string>
    <string name="btn_undo">Rückgängig</string>
    <string name="termin_regel_titel_bearbeiten">Regel bearbeiten</string>
    <string name="termin_regel_titel_neu">Neue Regel erstellen</string>
    <string name="termin_regel_startdatum">Startdatum: %1$s</string>
    <string name="termin_regel_abholung_heute">Abholung: Heute</string>
    <string name="termin_regel_auslieferung_heute">Auslieferung: Heute</string>
    <string name="termin_regel_abholung_datum">Abholung: %1$s</string>
    <string name="termin_regel_auslieferung_datum">Auslieferung: %1$s</string>
    <string name="termin_regel_wochentag_waehlen">Wochentag wählen</string>
    <string name="termin_regel_abbrechen">Abbrechen</string>
    <string name="termin_regel_abholung">Abholung</string>
    <string name="termin_regel_auslieferung">Auslieferung</string>
    <string name="badge_abholung_short">A</string>
    <string name="badge_auslieferung_short">L</string>
    <string name="termin_regel_heute_verwenden">Heute verwenden</string>
    <string name="termin_regel_datum_waehlen">Datum wählen</string>
    <string name="termin_regel_label_typ">Regel-Typ</string>
    <string name="termin_regel_label_zyklus_tage">Zyklus (Tage)</string>
    <string name="termin_regel_label_active">Regel aktiv</string>
    <string name="termin_regel_typ_weekly">Wöchentlich</string>
    <string name="termin_regel_typ_flexible">Flexibler Zyklus</string>
    <string name="termin_regel_typ_adhoc">Ad-hoc (nur Vorschläge)</string>
    <string name="error_laden">Fehler beim Laden: %1$s</string>
    <string name="validierung_regel_name">Bitte geben Sie einen Regel-Namen ein</string>
    <string name="validierung_intervall_min">Intervall muss mindestens 1 Tag sein</string>
    <string name="validierung_startdatum">Bitte wählen Sie ein Startdatum</string>
    <string name="validierung_abholung_wochentag">Bitte wählen Sie einen Abholung-Wochentag</string>
    <string name="validierung_auslieferung_wochentag">Bitte wählen Sie einen Auslieferung-Wochentag</string>
    <string name="toast_regel_gespeichert">Regel gespeichert</string>
    <string name="toast_fehler_speichern">Fehler beim Speichern</string>
    <string name="toast_fehler">Fehler: %1$s</string>
    <string name="dialog_regel_loeschen_titel">Regel kann nicht gelöscht werden</string>
    <string name="dialog_regel_loeschen_message">Diese Regel wird noch von einem oder mehreren Kunden verwendet. Bitte entfernen Sie die Regel zuerst von allen Kunden, bevor Sie sie löschen können.</string>
    <string name="dialog_regel_loeschen_confirm_titel">Regel löschen?</string>
    <string name="dialog_regel_loeschen_confirm_message">Möchten Sie diese Regel wirklich löschen? Diese Aktion kann nicht rückgängig gemacht werden.</string>
    <string name="dialog_regel_vom_kunden_entfernen_titel">Termin-Regel entfernen?</string>
    <string name="dialog_regel_vom_kunden_entfernen_message">Möchten Sie diese Termin-Regel von diesem Kunden entfernen? Die zugehörigen Intervalle werden aus der Bearbeitung entfernt.</string>
    <string name="dialog_regel_info_title">Regel-Informationen</string>
    <string name="dialog_close">Schließen</string>
    <string name="dialog_loeschen">Löschen</string>
    <string name="dialog_ok">OK</string>
    <string name="dialog_delete_customer_title">Kunde löschen?</string>
    <string name="dialog_delete_customer_message">Möchten Sie diesen Kunden wirklich löschen? Alle Termine dieses Kunden werden ebenfalls gelöscht.</string>
    <string name="dialog_mark_multiple_done_title">Mehrere Kunden als erledigt markieren?</string>
    <string name="dialog_mark_multiple_done_message">%1$d Kunden werden als erledigt markiert (Abholung + Auslieferung).</string>
    <string name="dialog_yes">Ja</string>
    <string name="dialog_delete_list_title">Liste löschen?</string>
    <string name="dialog_delete_list_message">Möchten Sie die Liste \'%1$s\' wirklich löschen?</string>
    <string name="dialog_list_has_customers_message">Es sind noch %1$d Kunde(n) in dieser Liste. Bitte entfernen Sie zuerst alle Kunden aus der Liste.</string>
    <string name="dialog_verschieben_title">Termin verschieben</string>
    <string name="dialog_verschieben_message">Wie möchten Sie vorgehen?</string>
    <string name="dialog_verschieben_single">Nur diesen Termin</string>
    <string name="dialog_verschieben_all">Alle zukünftigen Termine</string>
    <string name="dialog_verschieben_choose_a_or_l">A oder L verschieben?</string>
    <string name="dialog_verschieben_abholung">Abholung (A) verschieben</string>
    <string name="dialog_verschieben_auslieferung">Auslieferung (L) verschieben</string>
    <string name="dialog_kw_confirm_title">Keine Wäsche</string>
    <string name="dialog_kw_confirm_message">Keine Wäsche für diesen Termin registrieren?</string>
    <string name="dialog_verschieben_confirm_title">Termin verschieben</string>
    <string name="dialog_verschieben_confirm_message">Möchten Sie den Termin verschieben? Anschließend können Sie die Optionen wählen.</string>
    <string name="dialog_urlaub_von">Urlaub von</string>
    <string name="dialog_urlaub_bis">Urlaub bis</string>
    <string name="label_urlaub">Urlaub</string>
    <string name="label_reports">Berichte</string>
    <string name="dialog_urlaub_title">Urlaub</string>
    <string name="dialog_urlaub_current">Aktueller Urlaub: %1$s – %2$s</string>
    <string name="dialog_urlaub_new">Urlaub eintragen</string>
    <string name="dialog_urlaub_aendern">Urlaub ändern</string>
    <string name="dialog_urlaub_delete">Urlaub löschen</string>
    <string name="dialog_urlaub_delete_entry">Eintrag löschen</string>
    <string name="dialog_urlaub_no_urlaub">Kein Urlaub eingetragen</string>
    <string name="dialog_urlaub_add_new">+ Neuer Urlaub</string>
    <string name="dialog_urlaub_new_hint">Tippen Sie auf den Button, um einen neuen Urlaubseintrag anzulegen.</string>
    <string name="dialog_rueckgaengig_title">Rückgängig machen</string>
    <string name="dialog_rueckgaengig_message">Möchten Sie die Erledigung wirklich rückgängig machen?</string>
    <string name="dialog_termin_loeschen_title">Termin löschen</string>
    <string name="dialog_termin_loeschen_message">Möchten Sie diesen Termin wirklich löschen?</string>
    <string name="dialog_termin_aussetzen_title">Termin aussetzen</string>
    <string name="dialog_termin_aussetzen_message">Möchten Sie diesen Termin aussetzen? Er wird für dieses Datum übersprungen.</string>
    <string name="dialog_termin_anlegen_title">Termin Anlegen</string>
    <string name="dialog_termin_anlegen_message">Möchten Sie Termine anlegen? Anschließend können Sie eine Termin-Regel auswählen.</string>
    <string name="dialog_list_cannot_delete_title">Liste kann nicht gelöscht werden</string>
    <string name="dialog_list_delete_confirm_message">Bist du sicher, dass du diese Liste endgültig löschen möchtest?</string>
    <string name="sheet_abholung_erledigen">Abholung erledigen</string>
    <string name="sheet_auslieferung_erledigen">Auslieferung erledigen</string>
    <string name="sheet_keine_waesche">Keine Wäsche</string>
    <string name="sheet_rueckgaengig">Rückgängig</string>
    <string name="sheet_termin_verschieben">Termin verschieben</string>
    <string name="sheet_urlaub_eintragen">Urlaub eintragen</string>
    <string name="sheet_naechste_tour">Nächste Tour</string>
    <string name="sheet_telefon">Telefon</string>
    <string name="sheet_notizen">Notizen</string>
    <string name="content_desc_back">Zurück</string>
    <string name="content_desc_new_rule">Neue Regel erstellen</string>
    <string name="termin_regel_screen_title">Termin-Regeln</string>
    <string name="termin_regel_btn_new">Neue Regel</string>
    <string name="termin_regel_empty_title">Keine Regeln vorhanden</string>
    <string name="termin_regel_empty_subtitle">Erstellen Sie eine neue Regel mit dem + Button.</string>
    <string name="label_rule_name">Regel Name</string>
    <string name="label_desc">Beschreibung</string>
    <string name="label_abholung">Abholung:</string>
    <string name="label_auslieferung">Auslieferung:</string>
    <string name="label_verwendungen">Verwendungen:</string>
    <string name="placeholder_dash">--</string>
    <string name="map_title">Kartenansicht</string>
    <string name="map_empty">Keine Kunden mit Adressen gefunden</string>
</resources>